--- a/index1.html
+++ b/index1.html
@@ -344,19 +344,42 @@
             <h2>Badges</h2>
           </div>
           <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
-            <h4 style="text-align:left;color:#09203a">Badges</h4>
+            <h4 style="text-align:left;color:#09203a">Google Badges</h4>
             <p style="text-align:left;">
               <img src="badges/gut.png" height="75" width="80">
-              <img src="badges/essn.png" height="75" width="80">
-              <img src="badges/secr.png" height="75" width="80">
-              <img src="badges/architecture.png" height="75" width="80">
-              <img src="badges/data.png" height="75" width="80">
               <img src="badges/digi.jpg" height="75" width="80">
               <img src="badges/l1.jpg" height="75" width="80">
               <img src="badges/l2.jpg" height="75" width="80">
               <img src="badges/l3.jpg" height="75" width="80">
               <img src="badges/l4.jpg" height="75" width="80">
+              <img src="https://cdn.shopify.com/s/files/1/1626/8507/products/hacktoberfest-badge-product-pic_1024x1024.png?v=1665523602" height="75" width="80">
             </p>
+          </div>
+          <br>
+          <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="lefade-up" data-aos-delay="100" style="background:#fff">
+            <h4 style="text-align:left;color:#09203a">Other Badges</h4>
+            <p style="text-align:left;">
+              <img src="https://cdn.qwiklabs.com/xRejIPM4k6VgI8%2B%2B2Nz5bFHFx8PwK0nn9oQofkJOsS4%3D" height="75" width="83">
+              <img src="https://cdn.qwiklabs.com/izV2Ohc8pZEEsVH83cVnyrY1FYKOEe3tm4Y6n2dhOT0%3D" height="75" width="83">
+              <img src="https://cdn.qwiklabs.com/iN1Y1aBXjPPUZgDdv9GtQCf%2FBp0q3U%2FJg9uWO6RMKoc%3D" height="75" width="83">
+              <img src="https://cdn.qwiklabs.com/bWAeRBJNl9ENT%2B%2F%2FYwynddPswnVP9o2EtsDpMw4rVHc%3D" height="75" width="83">
+              <img src="https://cdn.qwiklabs.com/Ob6sxQipL%2F04zO87%2BtO1xGhLBio6RiIYWAfwH%2B2%2B02g%3D" height="75" width="83">
+              <img src="https://cdn.qwiklabs.com/pP4Mzjwe7NsGoAvHEldwoJVwPCm0%2FOQ2EF%2F3ZrOi4f0%3D" height="75" width="83">
+              <img src="https://cdn.qwiklabs.com/K3pSZUS8Un4i2txMb5adsx2ZoeLcdNQypn85AuJtdVY%3D" height="75" width="83">
+              <img src="https://cdn.qwiklabs.com/JdUu8WCGmvzBQnppDxG%2Fn1IoguiHNd0O%2FtdP3yWyv4Q%3D" height="75" width="83">
+              <br>
+              <img src="badges/architecture.png" height="75" width="80">
+              <img src="badges/data.png" height="75" width="80">
+              <img src="badges/essn.png" height="75" width="80">
+              <img src="badges/secr.png" height="75" width="80">            
+              <img src="https://cdn.qwiklabs.com/lpNBgucbTe%2FIlhoO9rISvZhYeImHXj5%2BOVU%2Br5IFLdI%3D" height="75" width="80">
+              <img src="https://cdn.qwiklabs.com/RncuWbitnza1OE3OnpLLM6p4swD5Rt5%2B4NAsYsz5kXg%3D" height="75" width="80">
+              <img src="https://cdn.qwiklabs.com/e6H6n6hpifjK1dSmCCcjHSQ62oU4vKTotiZSRuw62uE%3D" height="75" width="80">
+              <img src="https://cdn.qwiklabs.com/eQjd9zSmOdpx109ueEs%2F1P8nqCWWY3Wi%2BQ3oMQaUoEQ%3D" height="75" width="80">
+              <br>
+            </p>
+            <br>
+            <button class="w3-button w3-large"><a href="https://www.cloudskillsboost.google/public_profiles/2298c050-b300-456d-b565-1aa173ef5566" target="blank">Profile Link</a></button>
           </div>
           <br>
         </div>
